Mobile spacing fix.

--- a/css/theme.css
+++ b/css/theme.css
@@ -60,14 +60,14 @@ h6 {
 /*Paragraph and link style rules*/
 
 p {
-    margin: 0 0 25px;
+    margin: 0 8px 25px;
     font-size: 20px;
     line-height: 1.5;
 }
 
 @media(min-width:768px) {
     p {
-        margin: 0 0 35px;
+        margin: 0 6px 35px;
         font-size: 20px;
         line-height: 1.6;
     }
